# fractals

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  premake5.lua
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: c-cpp.yml
Mandelbrot/src/: main.cpp
fractals/: CMakeLists.txt
fractals/src/: buffer.cpp  buffer.hpp  event.hpp  framebuffer.cpp  framebuffer.hpp  image.cpp  image.hpp  input.cpp  input.hpp  keyboard.hpp  main.cpp  mono.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
mono/: CMakeLists.txt
mono/include/mono/: buffer.hpp  common.hpp  event.hpp  framebuffer.hpp  graphics_context.hpp  image.hpp  keyboard.hpp  mono.hpp  shader.hpp  texture.hpp  window.hpp
mono/src/: buffer.cpp  framebuffer.cpp  graphics_context.cpp  image.cpp  shader.cpp  texture.cpp  window.cpp
shaders/: 410.conway.gl.frag  410.koch3d.gl.frag  410.mandelbrot.gl.frag  410.post.gl.frag  410.render.gl.frag  410.shader.gl.frag  410.shader.gl.vert  410.texture.gl.frag
